--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,29 @@ build/
 .copilot/workspace/
 
 # Archivos de configuración de Copilot
+
+### Archivos de documentación y diagnóstico ###
+# Documentación de desarrollo
+TROUBLESHOOTING_CHAT.md
+DIAGNOSTICO_BUSQUEDAS.md
+DIAGNOSTICO_BOTON_CHAT.md
+FIX_CONNECTION_CLOSED.md
+FIX_BOTONES_DEFINITIVO.md
+MEJORAS_UI_RENDIMIENTO.md
+SOLUCION_ANUNCIOS.md
+SOLUCION_GRIDBAG_DEFINITIVA.md
+README_FINAL.md
+CHAT_SYSTEM_README.md
+
+# Scripts SQL de diagnóstico
+ARREGLAR_USER1.sql
+diagnostico_busquedas.sql
+src/main/resources/diagnostico_busquedas.sql
+
+# Archivos de testing temporal (ya eliminados pero por si acaso)
+**/Test*.java
+**/Verificar*.java
+**/Diagnosticar*.java
 .copilot.yml
 .copilot.yaml
 .copilotignore
